related articles truncate fix

--- a/assets/styles/partials/_related-posts.scss
+++ b/assets/styles/partials/_related-posts.scss
@@ -11,7 +11,7 @@
 
 	}
 
-    h2 {
+    >div >div >h2 {
 		margin-bottom: 64px;
 		font-size: ((32px / $font-size-base) + $font-unit);
 		font-weight: 900;
@@ -20,37 +20,37 @@
 	
 	.card-sm {
 		
-		.card {
-			@media screen and (max-width: $sm-break) {
-				// height:610px;
-				// max-height:610px;
-			}
-		}
+		// .card {
+		// 	@media screen and (max-width: $sm-break) {
+		// 		// height:610px;
+		// 		// max-height:610px;
+		// 	}
+		// }
 
-		.card h2 {
-			font-size: ((20px / $font-size-base) + $font-unit);
-			line-height: ((19px / $font-size-base) + $font-unit);
-			// font-weight: 900;
-			text-transform: uppercase;
-			height:58px;
-			// color: #1a1818;
+		// .card h2 {
+		// 	font-size: ((20px / $font-size-base) + $font-unit);
+		// 	line-height: ((19px / $font-size-base) + $font-unit);
+		// 	// font-weight: 900;
+		// 	text-transform: uppercase;
+		// 	height:58px;
+		// 	// color: #1a1818;
 	        
-	        @media screen and (max-width: $sm-break) {
-				font-size: ((30px / $font-size-base) + $font-unit);
-				height:90px;
+	 //        @media screen and (max-width: $sm-break) {
+		// 		font-size: ((30px / $font-size-base) + $font-unit);
+		// 		height:90px;
 
-	        }
-		}
+	 //        }
+		// }
 
-		.card p {
-			line-height: ((22px / $font-size-base) + $font-unit);
+		// .card p {
+		// 	line-height: ((22px / $font-size-base) + $font-unit);
 	        
-	        @media screen and (max-width: $sm-break) {
-				max-height:70px;
-				height:70px;
-	        }
+	 //        @media screen and (max-width: $sm-break) {
+		// 		max-height:70px;
+		// 		height:70px;
+	 //        }
 
 
-		}
+		// }
 	}
 }
